--- a/html/myCenter/message.html
+++ b/html/myCenter/message.html
@@ -7,7 +7,10 @@
 		<link rel="stylesheet" type="text/css" href="../../css/iconfont.css" />
 		<link rel="stylesheet" type="text/css" href="../../css/mui.min.css" />
 		<link rel="stylesheet" type="text/css" href="../../css/main.css"/>
-		<style type="text/css">				
+		<style type="text/css">
+			.mui-text-white{
+				color:#ffffff;
+			}	
 			.message .mui-card{
 				margin: 15px 0px;
 			}
@@ -19,7 +22,7 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav message">
-			<!--<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>-->
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left mui-text-white"></a>
 			<h1 id="title" class="mui-title">消息通知</h1>
 		</header>
 		<div id="message" class="mui-content message">
