--- a/html/scientistStory/index.html
+++ b/html/scientistStory/index.html
@@ -12,6 +12,9 @@
 			.mui-content.mui-scroll-wrapper{
 				background-color:#ffffff;
 			}
+			.mui-table-view-cell>a:not(.mui-btn).mui-active{
+				background-color: #ffffff;
+			}
 			.mui-media .mui-media-body{
 				font-size: 13px;
 				color:#333333;
@@ -65,6 +68,199 @@
             height:100%;
             z-index: 1;
         }
+        .mui-preview-image.mui-fullscreen {
+				position: fixed;
+				z-index: 20;
+				background-color: #000;
+			}
+			.mui-preview-header,
+			.mui-preview-footer {
+				position: absolute;
+				width: 100%;
+				left: 0;
+				z-index: 10;
+			}
+			.mui-preview-header {
+				height: 44px;
+				top: 0;
+			}
+			.mui-preview-footer {
+				height: 50px;
+				bottom: 0px;
+			}
+			.mui-preview-header .mui-preview-indicator {
+				display: block;
+				line-height: 25px;
+				color: #fff;
+				text-align: center;
+				margin: 15px auto 4;
+				width: 70px;
+				background-color: rgba(0, 0, 0, 0.4);
+				border-radius: 12px;
+				font-size: 16px;
+			}
+			.mui-preview-image {
+				display: none;
+				-webkit-animation-duration: 0.5s;
+				animation-duration: 0.5s;
+				-webkit-animation-fill-mode: both;
+				animation-fill-mode: both;
+			}
+			.mui-preview-image.mui-preview-in {
+				-webkit-animation-name: fadeIn;
+				animation-name: fadeIn;
+			}
+			.mui-preview-image.mui-preview-out {
+				background: none;
+				-webkit-animation-name: fadeOut;
+				animation-name: fadeOut;
+			}
+			.mui-preview-image.mui-preview-out .mui-preview-header,
+			.mui-preview-image.mui-preview-out .mui-preview-footer {
+				display: none;
+			}
+			.mui-zoom-scroller {
+				position: absolute;
+				display: -webkit-box;
+				display: -webkit-flex;
+				display: flex;
+				-webkit-box-align: center;
+				-webkit-align-items: center;
+				align-items: center;
+				-webkit-box-pack: center;
+				-webkit-justify-content: center;
+				justify-content: center;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				top: 0;
+				width: 100%;
+				height: 100%;
+				margin: 0;
+				-webkit-backface-visibility: hidden;
+			}
+			.mui-zoom {
+				-webkit-transform-style: preserve-3d;
+				transform-style: preserve-3d;
+			}
+			.mui-slider .mui-slider-group .mui-slider-item img {
+				width: auto;
+				height: auto;
+				max-width: 100%;
+				max-height: 100%;
+			}
+			.mui-android-4-1 .mui-slider .mui-slider-group .mui-slider-item img {
+				width: 100%;
+			}
+			.mui-android-4-1 .mui-slider.mui-preview-image .mui-slider-group .mui-slider-item {
+				display: inline-table;
+			}
+			.mui-android-4-1 .mui-slider.mui-preview-image .mui-zoom-scroller img {
+				display: table-cell;
+				vertical-align: middle;
+			}
+			.mui-preview-loading {
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				top: 0;
+				left: 0;
+				display: none;
+			}
+			.mui-preview-loading.mui-active {
+				display: block;
+			}
+			.mui-preview-loading .mui-spinner-white {
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				margin-left: -25px;
+				margin-top: -25px;
+				height: 50px;
+				width: 50px;
+			}
+			.mui-preview-image img.mui-transitioning {
+				-webkit-transition: -webkit-transform 0.5s ease, opacity 0.5s ease;
+				transition: transform 0.5s ease, opacity 0.5s ease;
+			}
+			@-webkit-keyframes fadeIn {
+				0% {
+					opacity: 0;
+				}
+				100% {
+					opacity: 1;
+				}
+			}
+			@keyframes fadeIn {
+				0% {
+					opacity: 0;
+				}
+				100% {
+					opacity: 1;
+				}
+			}
+			@-webkit-keyframes fadeOut {
+				0% {
+					opacity: 1;
+				}
+				100% {
+					opacity: 0;
+				}
+			}
+			@keyframes fadeOut {
+				0% {
+					opacity: 1;
+				}
+				100% {
+					opacity: 0;
+				}
+			}
+			img {
+				max-width: 100%;
+				height: auto;
+			}
+			.mui-status-bottom{
+				padding: 2px 0;
+			}
+			.mui-status-bottom:before,
+			.mui-status-bottom:after{
+				display: table;
+				content: " ";
+			}
+			.mui-status-bottom:after{
+				clear: both;
+			}
+			.mui-status-bottom .mui-status-item{
+				display: inline-block;
+				margin-right: 10px;
+				font-size: 11px;
+				color:#999999;
+			}
+			.mui-status-bottom .closeempty{
+				float: right;
+				font-size: 24px;
+				color:#dedede;
+			}
+			.mui-popover .remove-box{
+				padding: 10px 10px;
+			}
+			.remove-box .remove-title{
+				font-size: 13px;
+				color:#333333;
+			}
+			.remove-box .remove-item{
+				display: inline-block;
+				padding: 5px 8px;
+				margin-bottom: 10px;
+				font-size: 13px;
+				color:#999999;
+				transition: all .5s ease-in-out;
+			}
+			.remove-box .remove-item.active{
+				color:#ffffff;
+				background-color:#0062CC;
+				border-radius: 50px;
+			}
 		</style>
 	</head>
 
@@ -78,8 +274,20 @@
 				</ul>
 			</div>
 		</div> 
+		<div id="popover" class="mui-popover">
+			<div class="remove-box">
+				<h3 class="remove-title">可选理由，精准屏蔽：</h3>
+				<a class="remove-item" href="javascript:;">不感兴趣</a>
+				<a class="remove-item" href="javascript:;">不感兴趣2</a>
+				<a class="remove-item" href="javascript:;">不感兴趣3</a>
+				<a class="remove-item" href="javascript:;">不感兴趣4</a>
+				<a class="remove-item" href="javascript:;">不感兴趣5</a>
+			</div>
+		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../vendor/jQuery/jquery.js"></script>
+		<script src="../../js/mui.zoom.js"></script>
+		<script src="../../js/mui.previewimage.js"></script>
 		<script>
 			mui.init({
 				pullRefresh: {
@@ -114,7 +322,11 @@
 						_card+='<p class="text-gray mui-ellipsis-2">国务院总理李克强在人民大会堂三楼金色大厅会见采访十二届全国人大四次会议的中外记者，并回答记者提出的问题</p>';
 						_card+='</div>';
 						_card+='<div class="mui-media-footer">';
-						_card+='<img src="../../images/ad.png" />';
+						_card+='<img src="../../images/ad.png" data-preview-src="" data-preview-group="1" />';
+						_card+='</div>';
+						_card+='<div class="mui-status-bottom">';
+						_card+='<span class="mui-status-item">阅读量：<span class="number">100</span></span>';
+						_card+='<a href="#popover" class="closeempty"><span class="mui-icon mui-icon-closeempty"></span></a>';
 						_card+='</div>';
 						_card+='</a>';
 						li.innerHTML = _card;
@@ -148,7 +360,7 @@
 						_card+='</div>';
 						_card+='<div class="mui-media-footer">';
 						if(i!=0){
-							_card+='<img src="../../images/ad.png" />';
+							_card+='<img src="../../images/ad.png" data-preview-src="" data-preview-group="1"/>';
 						}else{
 							_card+='<div class="videoBox">';
 						    _card+='<img class="playBtn" src="../../images/playBtn.png" />';
@@ -158,6 +370,10 @@
 						    _card+='</video>';
 							_card+='</div>';
 						}
+						_card+='</div>';
+						_card+='<div class="mui-status-bottom">';
+						_card+='<span class="mui-status-item">阅读量：<span class="number">100</span></span>';
+						_card+='<a href="#popover" class="closeempty"><span class="mui-icon mui-icon-closeempty"></span></a>';
 						_card+='</div>';
 						_card+='</a>';
 						li.innerHTML = _card;
@@ -181,6 +397,10 @@
 				$(this).parent().find("video")[0].play();
 				console.log($(this).parent().find("video")[0].src);
 			});
+			$(document).on("tap",".remove-box>a.remove-item",function(){
+				$(this).addClass("active").siblings(".remove-item").removeClass("active");
+			});
+			mui.previewImage();
 		</script>
 	</body>
 
