--- a/index.html
+++ b/index.html
@@ -41,6 +41,51 @@
 			.search-input .mui-search .mui-placeholder .mui-icon{
 				color:#999999;
 			}
+			.icon{
+				display: block;
+				width: 25px;
+				height: 21px;
+				margin: 5px auto 0px;
+				background-image: url("./images/tab_bar.png");
+				background-repeat: no-repeat;		
+				background-size: 290px 77px;					
+			}
+			
+			.icon-tab-bar1{
+				background-position: -45px -12px;
+			}
+			
+			.mui-active .icon-tab-bar1{
+				background-position: -45px -42px;				
+			}
+			
+			.icon-tab-bar2{
+				background-position:  -102px -12px;
+			}
+			
+			.mui-active .icon-tab-bar2{
+				background-position: -102px -42px;				
+			}
+			
+			.icon-tab-bar3{
+				background-position:  -159px -12px;
+			}
+			
+			.mui-active .icon-tab-bar3{
+				background-position: -159px -42px;				
+			}
+			
+			.icon-tab-bar4{
+				background-position:  -216px -12px;
+			}
+			
+			.mui-active .icon-tab-bar4{
+				background-position: -216px -42px;				
+			}
+			
+			.mui-bar-tab .mui-tab-label{
+				font-size: 11px;
+			}
 		</style>
 	</head>
 	<body>
@@ -57,19 +102,19 @@
 		</header>
 		<nav class="mui-bar mui-bar-tab">
 			<a id="defaultTab" class="mui-tab-item mui-active" data-wid="viewgroup" href="./html/card/index.html">
-				<span class="mui-icon mui-icon-home"></span>
+				<span class="icon icon-tab-bar1"></span>
 				<span class="mui-tab-label">九大名片</span>
 			</a>
 			<a class="mui-tab-item" href="./html/techDictionary/index.html">
-				<span class="mui-icon mui-icon-email"></span>
+				<span class="icon icon-tab-bar2"></span>
 				<span class="mui-tab-label">科技词典</span>
 			</a>
 			<a class="mui-tab-item" href="./html/scientistStory/index.html">
-				<span class="mui-icon mui-icon-contact"></span>
+				<span class="icon icon-tab-bar3"></span>
 				<span class="mui-tab-label">科研故事</span>
 			</a>
 			<a class="mui-tab-item" href="./html/myCenter/index.html">
-				<span class="mui-icon mui-icon-gear"></span>
+				<span class="icon icon-tab-bar4"></span>
 				<span class="mui-tab-label">我的</span>
 			</a>
 		</nav>
