--- a/html/techDictionary/index.html
+++ b/html/techDictionary/index.html
@@ -102,28 +102,28 @@
 			<div id="slider" class="mui-slider mui-fullscreen">
 				<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
 					<div class="mui-scroll">
-						<a class="mui-control-item mui-active" href="#item1mobile" data-wid="../public/articleList.html">
+						<a class="mui-control-item mui-active" href="#item1mobile" data-wid="pullrefresh_sub9.html">
 							推荐
 						</a>
-						<a class="mui-control-item" href="#item2mobile" data-wid="../public/articleList.html">
+						<a class="mui-control-item" href="#item2mobile" data-wid="pullrefresh_sub10.html">
 							电子信息
 						</a>
-						<a class="mui-control-item" href="#item3mobile" data-wid="../public/articleList.html">
+						<a class="mui-control-item" href="#item3mobile" data-wid="pullrefresh_sub11.html">
 							航天航空
 						</a>
-						<a class="mui-control-item" href="#item4mobile" data-wid="../public/articleList.html">
+						<a class="mui-control-item" href="#item4mobile" data-wid="pullrefresh_sub12.html">
 							生物制药
 						</a>
-						<a class="mui-control-item" href="#item5mobile" data-wid="../public/articleList.html">
+						<a class="mui-control-item" href="#item5mobile" data-wid="pullrefresh_sub13.html">
 							新能源
 						</a>
-						<a class="mui-control-item" href="#item5mobile" data-wid="../public/articleList.html">
+						<a class="mui-control-item" href="#item5mobile" data-wid="pullrefresh_sub14.html">
 							现代互联网技术
 						</a>
-						<a class="mui-control-item" href="#item5mobile" data-wid="../public/articleList.html">
+						<a class="mui-control-item" href="#item5mobile" data-wid="pullrefresh_sub15.html">
 							数字娱乐
 						</a>
-						<a class="mui-control-item" href="#item5mobile" data-wid="../public/articleList.html">
+						<a class="mui-control-item" href="#item5mobile" data-wid="pullrefresh_sub16.html">
 							高端装备制造
 						</a>
 					</div>
